- Implement frame-by-frame video decoding for JPEG format handling - Upgrade to Gradle 8.11.2, Android SDK 34, Java 17 - Add Android 13+ permission handling (READ_MEDIA_*, MANAGE_EXTERNAL_STORAGE) - Enhance Xposed hooks with improved debugging and error handling

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,8 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    namespace "com.example.vcam"
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.vcam"
@@ -21,14 +22,30 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures {
+        buildConfig true
+    }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    lint {
+        baseline = file("lint-baseline.xml")
+    }
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
 dependencies {
     compileOnly 'de.robv.android.xposed:api:82'
     compileOnly 'de.robv.android.xposed:api:82:sources'
-
+    // Add local JARs for better IDE support
+    compileOnly files('libs/api-82.jar')
 }
