--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,17 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+
+# Specify Java version for Gradle
+org.gradle.java.home=/usr/lib/jvm/java-17-openjdk-amd64
+
+# Android Studio compatibility
+android.useAndroidX=true
+android.enableJetifier=true
+
+# Disable problematic IDE features
+org.gradle.configuration-cache=false
+org.gradle.unsafe.configuration-cache=false
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
