removed specific java version for gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
 # Specify Java version for Gradle
-org.gradle.java.home=/usr/lib/jvm/java-17-openjdk-amd64
+#org.gradle.java.home=/usr/lib/jvm/java-17-openjdk-amd64
 
 # Android Studio compatibility
 android.useAndroidX=true
