--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,8 +3,6 @@ name: Android CI
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -18,12 +16,26 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-    
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-      
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v2
+
+    - name: Give permission to gradlew
+      run: chmod +x ./gradlew
+
+    - name: Clean Gradle
+      run: ./gradlew clean
+
+    - name: Build APK
+      run: ./gradlew assembleRelease
+
+    - name: List APK output
+      run: ls -R app/build/outputs/apk/release/
+
+    - name: Upload release APK (v4)
+      uses: actions/upload-artifact@v4
+      with:
+        name: VCam
+        path: app/build/outputs/apk/release/app-release*.apk
+        if-no-files-found: error  # Optional, fail if file not found
+        overwrite: true           # Important for v4
